@@ -214,8 +214,6 @@ momentaneamente pero al irse el splash, se recargan
 -setting autorebobinado de cintas standard y real tape?
 
 
--Mostrar T estados en vista 1
-
 -Opción no marcar registros a modificar 
 
 -Error: Abrir menú debug cpu con tecla F
